<resources>
    <string name="app_name">Foodapp</string>
    <string name="txt_breakfast">BreakFast</string>
    <string name="txt_vegetarian">Vegetarian</string>
    <string name="txt_cake">Dessert</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummyName">Garlic Butter Shrimp</string>
    <string name="_1_2_k">1.2 k</string>
    <string name="cooked">Cooked</string>
    <string name="txt_Detail">Detail</string>
    <string name="txt_imageview">ImageView</string>
    <string name="_7_2">7.2</string>
    <string name="txt_calories">calories</string>
    <string name="txt_carbo">carbo</string>
    <string name="txt_protein">protein</string>
    <string name="txt_description">Description</string>
    <string name="txt_recipes">Recipes</string>
    <string name="txt_ingredients">Ingredients</string>
    <string name="txt_instructions">instructions</string>
</resources>